Iniciado o front end e implementação do JSP no projeto

--- a/ProjetoJavaWeb1/src/main/webapp/frmusuario.html
+++ b/ProjetoJavaWeb1/src/main/webapp/frmusuario.html
@@ -8,6 +8,9 @@
 	
 	<form action="UsuarioController.do" method="post">
 		
+		<label> ID: </label>
+		<input type="text" name="txtid" value="" size="20"/><br/>
+		
 		<label> Nome: </label>
 		<input type="text" name="txtnome" value="" size="20"/><br/>
 		
